# memora

./: .gitignore  SOUL.md  agent.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/: memora
claude-plugin/: README.md  install.sh
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/hooks-handlers/: recall_state.py  session_start.py  user_prompt_submit.py
mem_engine/: README.md  __init__.py  adaptor.py  cli.py  demo.py  embedder.py  engine.py  mcp_tools.py  promote.py  recall.py  schema.py  shortterm.py  stores.py  worker.py
mem_engine/hooks/: mem_engine_observe.py
mem_engine/tests/: test_engine.py
memora/: backends.py  background.py  cli.py  document.py  embeddings.py  hierarchy.py  http_api.py  schema.py  server.py  storage.py
memora-graph/functions/api/: duplicates.ts  graph.ts  memories.ts
memora-graph/functions/api/memories/: [id].ts
memora/graph/: data.py  index.html  server.py
plans/: optimize-memory-perf.md
recall/: .gitignore  capture.py  consolidate.py  daemon.py  distill_prompt.md  dream.sh  dream_prompt.md  migrate_embeddings.py  recall.py  save_nudge.py  shortterm_graph.py  whisper.py
skills/memora/: SKILL.md
tests/: test_gitagent_manifest.py  test_storage.py
